kubernetes/operationcode_python_backend/overlays/prod/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: back-end
spec:
  template:
    spec:
      containers:
        - name: app
