kubernetes/operationcode_python_backend/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: back-end
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:633607774026:certificate/8de9fd02-191c-485f-b952-e5ba32e90acb
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.response-401: '{"Type":"fixed-response","FixedResponseConfig":{"ContentType":"text/plain","StatusCode":"401","MessageBody":"401 Not Authorized"}}'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=oc-alb-logs,access_logs.s3.prefix=oc-prod
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
  labels:
    app: back-end
spec:
  rules:
  # http redirect must come first
  - http:
      paths:
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
  # back-end production
  - host: backend.k8s.operationcode.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: back-end-service
          servicePort: 80
  - host: api.operationcode.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: back-end-service
          servicePort: 80
  # resources-api production
  - host: resources.k8s.operationcode.org
    http:
      paths:
      - path: /metrics
        backend:
          serviceName: response-401
          servicePort: use-annotation
      - path: /metrics/*
        backend:
          serviceName: response-401
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: resources-api-service
          servicePort: 80
  - host: resources.operationcode.org
    http:
      paths:
      - path: /metrics
        backend:
          serviceName: response-401
          servicePort: use-annotation
      - path: /metrics/*
        backend:
          serviceName: response-401
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: resources-api-service
          servicePort: 80
